<resources>
    <string name="app_name">android_1_hw</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="division">/</string>
    <string name="point">.</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="minus">-</string>
    <string name="multiplication">X</string>
    <string name="delete">delete</string>
    <string name="clear">clear</string>
    <string name="dark_theme">Dark theme</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="settings">settings</string>


</resources>