<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/settings" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/text_view_calculator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equals"
                style="@style/equalsButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/equals" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_seven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_nine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplication" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/zero" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/division" />
        </TableRow>


    </TableLayout>
</LinearLayout>