<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/theme_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/theme_switcher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintBaseline_toBaselineOf="@+id/theme_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/theme_setting"
        app:showText="true" />

</androidx.constraintlayout.widget.ConstraintLayout>